--- a/about.html
+++ b/about.html
@@ -18,7 +18,10 @@
 
     <div class="container">
         <h2>About Courtney Huffer</h2>
-        <img src="images/Portrait1.jpg" alt="Portrait of Courtney Huffer" style="width: 150px;">            <!-- Changing this to portrait 1 to differ from portrait 2 on index page -->
+        <figure>
+            <img src="images/Portrait1.jpg" alt="Portrait of Courtney Huffer" style="width: 150px;">
+            <figcaption>Portrait of Courtney Huffer</figcaption>
+        </figure>
         
         <p><b>Biography:</b></p>
         <p><b>Courtney Huffer: From Zoo Keeper, to Beloved Groomer</b></p>
@@ -51,8 +54,7 @@
 
     <footer>
         <p>Connect with me on social media!</p>
+        <p><a href="https://facebook.com/courtney.dover2" target="_blank">External Link</a></p>  <!-- External link -->
     </footer>
 </body>
 </html>
-
-<!-- This page was easy, made some slight formatting changes to the bulk paragraphs and about intro lines. -->
