--- a/hobbies.html
+++ b/hobbies.html
@@ -20,32 +20,42 @@
         <h2>Courtney's Hobbies</h2>
         <!-- Images and descriptions of Courtney's hobbies -->
         <div class="hobby">
-            <img src="images/imageofgrooming.png" alt="Courtney grooming a dog">                    <!-- Image of Courtney grooming a dog -->
+            <figure>
+                <img src="images/imageofgrooming.png" alt="Courtney grooming a dog">
+                <figcaption>Courtney grooming a dog</figcaption>
+            </figure>
             <div>
                 <h3>Dog Grooming</h3>
-                <p>Courtney spends a lot of time grooming her own dogs as well as others...</p>     <!-- Description of Courtney's dog grooming -->
+                <p>Courtney spends a lot of time grooming her own dogs as well as others...</p>
             </div>
         </div>
 
         <div class="hobby">
-            <img src="images/imageofgardening.jpg" alt="Courtney's garden">                         <!-- Image of our wildflower garden -->
+            <figure>
+                <img src="images/imageofgardening.jpg" alt="Courtney's garden">
+                <figcaption>Courtney's garden</figcaption>
+            </figure>
             <div>
                 <h3>Gardening</h3>
-                <p>Courtney enjoys gardening in her wildflower garden...</p>                        <!-- Description of our wildflower garden -->
+                <p>Courtney enjoys gardening in her wildflower garden...</p>
             </div>
         </div>
 
         <div class="hobby">
-            <img src="images/imageofquails.jpg" alt="Courtney's quail">                             <!-- Image of Courtney's quails -->
+            <figure>
+                <img src="images/imageofquails.jpg" alt="Courtney's quail">
+                <figcaption>Courtney's quail</figcaption>
+            </figure>
             <div>
                 <h3>Quail Keeping</h3>
-                <p>Courtney takes care of her six quails...</p>                                     <!-- Description of Courtney's quails -->
+                <p>Courtney takes care of her six quails...</p> 
             </div>
         </div>
     </div>
 
     <footer>
         <p>Connect with me on social media!</p>
+        <p><a href="https://facebook.com/courtney.dover2" target="_blank">External Link</a></p>  <!-- External link -->
     </footer>
 </body>
 </html>
