--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <div class="container">
         <h2>Welcome to my bioSite</h2>                                          <!-- Subtitle for the course -->
         <div class="index-content">                                             <!-- Section for module assignments -->
-            <img src="images/Portrait2.jpg" alt="Portrait of Courtney Huffer">  <!-- Image of Courtney Huffer -->
+            <figure>
+                <img src="images/Portrait2.jpg" alt="Portrait of Courtney Huffer">  <!-- Image of Courtney Huffer -->
+                <figcaption>Portrait of Courtney Huffer</figcaption>                <!-- Caption for the image -->
+            </figure>
             <div>
                 <p>This is Courtney Huffer, a dog groomer and animal lover. Learn more about her through this website.</p>
                 <a href="about.html">Read More</a>                             <!-- Link to about.html -->
@@ -28,7 +31,8 @@
     </div>
 
     <footer>
-        <p>Connect with me on social media!</p>                               <!-- Footer message placeholder for social links
+        <p>Connect with me on social media!</p>                               <!-- Footer message placeholder for social links -->
+        <p><a href="https://facebook.com/courtney.dover2" target="_blank">External Link</a></p>  <!-- External link -->
     </footer>
 </body>
 </html>
